# rheo

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  conftest.py  test_throughput.py
docs/: ARCHITECTURE.md  CLI.md  IDEAS.md  README.md  ROADMAP.md
examples/: 01_basic_download.py  02_multiple_with_priority.py  03_hash_validation.py  04_progress_display.py  04_progress_tracking.py  05_event_logging.py  05_event_monitoring.py  06_batch_summary.py  07_retry_handling.py  README.md
scripts/: run_examples.py
src/async_download_manager/: ARCHITECTURE.md  cli.py  main.py  test_data.py
src/rheo/: main.py
tests/: conftest.py  test_app_wiring.py  test_fixtures.py
tests/cli/: conftest.py  test_cli_app.py  test_download_command.py
tests/config/: test_settings.py
tests/core/: conftest.py  test_event_emitter.py  test_logger.py  test_manager.py  test_manager_tracker_integration.py  test_null_implementations.py  test_queue.py  test_tracker.py  test_worker.py  test_worker_events.py
tests/domain/: conftest.py  test_downloads.py  test_file_config.py  test_hash_validation.py  test_retry.py  test_speed.py
tests/downloads/: conftest.py  test_error_categoriser.py  test_file_exists.py  test_manager_initialization.py  test_manager_queue.py  test_manager_shutdown.py  test_null_retry.py  test_queue.py  test_retry_handler.py  test_validation.py  test_worker.py  test_worker_events_emission.py  test_worker_events_injection.py  test_worker_events_payloads.py  test_worker_retry.py  test_worker_speed.py  test_worker_validation.py
tests/events/: conftest.py  test_base_event.py  test_emitter.py  test_null_emitter.py  test_subscription.py
tests/fixtures/: __init__.py  test_data.py
tests/infrastructure/: __init__.py  conftest.py  test_logging.py
tests/integration/: test_cancellation.py  test_cli_download.py  test_file_exists_strategy.py  test_manager_tracker.py  test_queue_priority.py  test_retry.py  test_speed_tracking.py
tests/tracking/: conftest.py  (+8 more)
(+130 files in other folders)
