[project]
name = "async-downloader"
version = "0.1.0"
description = ""
authors = [
    {name = "plutopulp",email = "plutopulped@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "async_download_manager", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
pytest = "^8.4.2"

[tool.isort]
profile = 'black'