[project]
name = "async-downloader"
version = "0.1.0"
description = ""
authors = [
    {name = "plutopulp",email = "plutopulped@gmail.com"}
]
[tool.poetry]
packages = [{include = "async_download_manager", from = "src"}]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.13"
loguru = "^0.7.3"
aiohttp = "^3.12.15"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-mock = "^3.12.0"
aioresponses = "^0.7.8"

[tool.poetry.scripts]
adm = "async_download_manager.cli:cli"

[tool.isort]
profile = 'black'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"